add body validation documentation

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -47,9 +47,18 @@
   gap: 0.5rem;
 }
 
+@keyframes drawingText {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
 .pulsar-letter {
   display: inline-block;
-  animation: fadeIn 3s;
+  animation: fadeIn 3s, drawingText 200s infinite;
 }
 
 .description-text {
